# discord-bot

./: .gitignore  Pipfile  README.md  pyproject.toml
cupid-bot/: __main__.py  bot.py  config.py  converters.py  errors.py  genders.py  helpcmd.py  pagination.py
cupid-bot/cogs/: __init__.py  meta.py  people.py  proposals.py  relationships.py
cupid-bot/utils/: __init__.py  converters.py  errors.py  gifs.py  graph.py  helpcmd.py  pagination.py  sentences.py
